sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:10: error: type mismatch;
 found   : Unit
 required: Boolean
   else if (c=BLANC) {var j=i ; while (j>=0 && getCouleur(j)!=BLEU && getCouleur(j)!=BLANC )
             ^